--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <title>Recruiter Calculator</title>
 </head>
-<body class="bgImg  " style="background-image: url('/images/img8.jpg')"> 
+<body class="bgImg  " style="background-image: url('./images/img8.jpg')"> 
  <header></header>
  <main>
     <section class="container divCenter text-light">
